<resources>
    <string name="app_name">爱要说</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="title_activity_login">登录</string>
    <string name="get_very_code">获取验证码</string>
    <string name="activity_main_default_title">广场</string>
    <string name="activity_post_title">发布动心话</string>
    <string name="prompt_post_activity_phone">请输入Ta的手机，也可输入名字搜索</string>
    <string name="prompt_post_activity_words">输入心动的话</string>
    <string name="no_more_send">你还没有对Ta发表过心动的话，\n赶紧点右上角发一个吧~~</string>
    <string name="no_more_receive">还没有人对你说过心动的话，\n赶紧邀请他加入吧~</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_new_main">广场</string>

    <string name="title_about">关于</string>
    <string name="title_logout">退出登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="tip_welcome">欢迎使用基于TILVBSDK的双人视频通话示例程序,
        该示例程序可以在两台安卓手机上进行视频/语音通话\n\n在使用之前，请输入一个用户标识(为避免冲突，建议使用自己的手机号)，该用户标识将作为呼叫号码，供别人呼叫，并作为来电号码显示在来电界面
    </string>

    <string name="title_login">手机号登录</string>

    <string name="tip_account">用户名</string>
    <string name="tip_password">密码</string>

    <string name="tip_hit_account">用户名为 4 ~ 24 个字符，不能为纯数字</string>
    <string name="tip_hit_password">密码长度为 8 ~ 16 个字符</string>

    <string name="tip_logout">注销</string>

    <string name="tip_my_address">本机号码</string>
    <string name="tip_dst_address">对方号码</string>
    <string name="tip_make_call">发起呼叫</string>

    <string name="tip_call_list">通话记录</string>

    <string name="tip_accept_call">接听来电</string>
    <string name="tip_reject_call">拒接来电</string>
    <string name="tip_end_call">挂断</string>

    <string name="tip_close_camera">关闭摄像头</string>
    <string name="tip_open_camera">打开摄像头</string>
    <string name="tip_switch_camera">切换摄像头</string>
    <string name="tip_close_mic">关闭麦克风</string>
    <string name="tip_open_mic">打开麦克风</string>
    <string name="tip_set_speaker">切换到扬声器</string>
    <string name="tip_set_headset">切换到听筒</string>
    <string name="tip_set_beauty">设置美颜</string>

    <string name="toast_phone_empty">呼叫号码不能为空</string>
    <string name="makecall">呼叫</string>
    <string name="phonenum_tips">请输入需要拨打手机号</string>
    <string name="phone_number">呼叫号码</string>
    <string name="myphone">本机号码</string>
    <string name="invite">邀请</string>
    <string name="log">日志</string>
    <string name="invite_tip">输入邀请用户id</string>
    <string name="cancel">取消</string>
    <string name="video_tips">点击按钮进行随机1V1视频聊天</string>

</resources>
