<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

    <com.tencent.ilivesdk.view.AVRootView
        android:id="@+id/av_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/rl_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_call_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="New Call"
            android:textColor="@color/color_white"
            android:textSize="20pt"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:gravity="right"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_close_camera"
                android:textColor="@color/color_white"/>
            <Button
                android:id="@+id/btn_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_switch_camera"
                android:textColor="@color/color_white"/>
            <Button
                android:id="@+id/btn_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_close_mic"
                android:textColor="@color/color_white"/>
            <Button
                android:id="@+id/btn_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_set_headset"
                android:textColor="@color/color_white"/>
            <Button
                android:id="@+id/btn_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_set_beauty"
                android:textColor="@color/color_white"/>

            <Button
                android:id="@+id/btn_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/invite"
                android:textColor="@color/color_white"/>

            <Button
                android:id="@+id/btn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/log"
                android:textColor="@color/color_white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp">
            <Button
                android:id="@+id/btn_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/tip_end_call"
                android:textColor="@color/color_white"
                android:visibility="gone"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_beauty_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <SeekBar
            android:id="@+id/sb_beauty_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        />

        <Button
            android:id="@+id/btn_beauty_setting_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="提交"
            android:textColor="@color/color_white"/>

    </LinearLayout>

</RelativeLayout>
