<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brzhang.fllipped.view.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/flipped_login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/flipped_input_background"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:textColor="@color/text_color_h2"
            android:textCursorDrawable="@null" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/flipped_login_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/flipped_input_background"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:paddingLeft="5dp"
                android:paddingTop="12dp"
                android:textColor="@color/text_color_h2"
                android:textCursorDrawable="@null" />

            <Button
                android:id="@+id/flipped_login_bt_get_very_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/flipped_button_background"
                android:text="@string/get_very_code" />
        </LinearLayout>


        <Button
            android:id="@+id/flipped_login_bt_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/flipped_button_background"
            android:gravity="center"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/flipped_login_tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="《用户须知》" />
</LinearLayout>
